# uniffi-xforge

./: .gitignore  Cargo.toml  README.md  build.rs  libforge.yaml  rust-toolchain.toml  uniffi-bindgen.rs  uniffi.toml
.cargo/: config.toml
.github/workflows/: uniffi-xforge-macos.yml
dart/: pubspec.yaml
dart/example/: README.md  pubspec.yaml
dart/example/android/: gradle.properties
dart/example/android/app/: build.gradle.kts
dart/example/android/app/src/main/: AndroidManifest.xml
dart/example/android/app/src/main/kotlin/com/example/uniffi_xforge_example_app/: MainActivity.kt
dart/example/ios/Runner/: Info.plist
dart/example/ios/Runner.xcodeproj/: project.pbxproj
dart/example/lib/: main.dart
dart/example/linux/: CMakeLists.txt
dart/example/linux/runner/: my_application.cc
dart/example/macos/Runner.xcodeproj/: project.pbxproj
dart/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
dart/example/macos/Runner/Configs/: AppInfo.xcconfig
dart/example/test/: widget_test.dart
dart/example/web/: index.html  manifest.json
dart/example/windows/: CMakeLists.txt
dart/example/windows/runner/: Runner.rc  main.cpp
dart/hook/: build.dart
dart/lib/: uniffi_xforge.dart
scripts/: xforge-android-linker.sh  xforge-link-aarch64-linux-android.sh  xforge-link-armv7-linux-androideabi.sh  xforge-link-x86_64-linux-android.sh
src/: lib.rs  uniffi-xforge.udl
